feat: finalize dashboard
