# docs/swagger.json
@@ -9,6 +9,44 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/dashboard/menu": {
+            "get": {
+                "security": [
+                    {
+                        "Auth0Token": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dashboard"
+                ],
+                "summary": "Get the menu for a store",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Menu"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
         "/dashboard/orders": {
             "get": {
                 "security": [
@@ -615,6 +653,23 @@
                 }
             }
         },
+        "Menu": {
+            "type": "object",
+            "properties": {
+                "categories": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/GetStoreCategory"
+                    }
+                },
+                "opening_hours": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/GetStoreOpeningHour"
+                    }
+                }
+            }
+        },
         "OrderItem": {
             "type": "object",
             "properties": {
@@ -669,23 +724,6 @@
             "properties": {
                 "identifier": {
                     "type": "string"
-                }
-            }
-        },
-        "menus.MenuRedisModel": {
-            "type": "object",
-            "properties": {
-                "categories": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/GetStoreCategory"
-                    }
-                },
-                "openingHours": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/GetStoreOpeningHour"
-                    }
                 }
             }
         }
